--- a/Resources/ALC255/Info.plist
+++ b/Resources/ALC255/Info.plist
@@ -226,7 +226,7 @@
 				<key>Id</key>
 				<integer>80</integer>
 				<key>Path</key>
-				<string>Platforms80.xml.zlib</string>
+				<string>layout80.xml.zlib</string>
 			</dict>
 		</array>
 		<key>Platforms</key>
@@ -438,6 +438,14 @@
 				<integer>37</integer>
 				<key>Path</key>
 				<string>Platforms37.xml.zlib</string>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>Realtek ALC255 for Aspire 7 A715-42G AMD by long5436</string>
+				<key>Id</key>
+				<integer>80</integer>
+				<key>Path</key>
+				<string>Platforms80.xml.zlib</string>
 			</dict>
 		</array>
 	</dict>
