change info name

--- a/Resources/ALC255/Info.plist
+++ b/Resources/ALC255/Info.plist
@@ -222,7 +222,7 @@
 			</dict>
 			<dict>
 				<key>Comment</key>
-				<string>Realtek ALC255 for Aspire 7 A715-42G AMD by long5436</string>
+				<string>Realtek ALC255 for Acer Aspire 7 A715-42G AMD by Long</string>
 				<key>Id</key>
 				<integer>80</integer>
 				<key>Path</key>
@@ -441,7 +441,7 @@
 			</dict>
 			<dict>
 				<key>Comment</key>
-				<string>Realtek ALC255 for Aspire 7 A715-42G AMD by long5436</string>
+				<string>Realtek ALC255 for Acer Aspire 7 A715-42G AMD by Long</string>
 				<key>Id</key>
 				<integer>80</integer>
 				<key>Path</key>
